src/objects/Organisation_Competitor_Fleet_Models__c.object
<CustomObject>
    <fields>
        <fullName>Changeover_Date__c</fullName>
        <label>Changeover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_Fleet_Model__c</fullName>
        <label>Competitor Fleet Model</label>
        <referenceTo>Competitor_Fleet_Models__c</referenceTo>
        <relationshipLabel>Organisation Competitor Fleet Models</relationshipLabel>
        <relationshipName>Organisation_Competitor_Fleet_Models</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Organisation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Organisation, Direct</value>
            </filterItems>
            <infoMessage>Select an Organisation or Direct account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organisation Competitor Fleet Models</relationshipLabel>
        <relationshipName>Organisation_Competitor_Fleet_Models</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Organisation Competitor Fleet Model</label>
    <nameField>
        <displayFormat>CFM-{0000}</displayFormat>
        <label>OCFM ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organisation Competitor Fleet Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>